# example-bazel-go

./: BUILD.bazel  MODULE.bazel  WORKSPACE  deps.bzl  go.mod  go.sum
cmd/: BUILD.bazel  main.go
