load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/Shulammite-Aso/bazel-demo-app/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//bazel",
        "//handlers",
        "@com_github_antchfx_xmlquery//:xmlquery",
        "@com_github_bgentry_go_netrc//:netrc",
        "@com_github_bwmarrin_snowflake//:snowflake",
        "@com_github_dgrijalva_jwt_go//:jwt-go",
        "@com_github_fatih_color//:color",
        "@com_github_go_playground_validator_v10//:validator",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_mux//:mux",
        "@com_github_joho_godotenv//:godotenv",
        "@com_github_patrickmn_go_cache//:go-cache",
        "@com_github_sirupsen_logrus//:logrus",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
        "@com_github_stretchr_testify//assert",
        "@in_gopkg_yaml_v3//:yaml_v3",
        "@org_golang_google_protobuf//proto",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_antchfx_xmlquery//:xmlquery",
        "@com_github_bgentry_go_netrc//:netrc",
        "@com_github_bwmarrin_snowflake//:snowflake",
        "@com_github_google_uuid//:uuid",
        "@com_github_gorilla_mux//:mux",
        "@com_github_shulammite_aso_bazel_demo_app//handlers:go_default_library",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_image(
    name = "cmd_image",
    base = "@distroless_base//image",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
